argocd/auth/wgdashboard/wgdashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wgdashboard
  namespace: auth
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 10086
      protocol: TCP
    - port: 51820
      targetPort: 51820
      protocol: UDP
  selector:
    app: wgdashboard
