argocd/auth/wgdashboard/wgdashboard-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wgdashboard-internal-route
  namespace: auth
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["wg.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: wgdashboard
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
